--- a/src/main/resources/templates/all-teams.html
+++ b/src/main/resources/templates/all-teams.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>All teams</title>
 </head>
 <body>
-$END$
+<div id = "content">
+    <table class="datatable">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Players</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr th:if="${teams.empty}">
+            <td colspan="2"> No players</td>
+        </tr>
+        <tr th:each="team: ${teams}">
+            <td><span th:text="${team.name}"></span></td>
+            <td><span th:text="${team.players}"></span></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
