--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+
+<form th:action = "@{/players}" method="get">
+    <button type="submit">Players</button>
+</form>
+
+<form th:action = "@{/allTeams}" method="get">
+    <button type="submit">Teams </button>
+</form>
+
+
 
 </body>
 </html>
