--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <button type="submit">Players</button>
 </form>
 
-<form th:action = "@{/allTeams}" method="get">
+<form th:action = "@{/teams}" method="get">
     <button type="submit">Teams </button>
 </form>
 
